--- a/0x02-CSS_advanced/styles/5-style.css
+++ b/0x02-CSS_advanced/styles/5-style.css
@@ -1,5 +1,4 @@
-/* =============== colors ================= */
-
+/* ================== colors =====================*/
 :root {
     --color-primary: #d73953;
     --color-black : #090909;
@@ -8,34 +7,38 @@
     --color-dark-grey: #353535;
     --text-color: var(--color-black);
 
-/* =============== fonts ================= */
-    --font-family-base: "Helvetica Neue", Helvetica, Arial, sans-serif;
+/* ================== font family =====================*/
+    --font-family-base: "Helvetica Neue", Helvetica, Arial, sans-serif;/* Update root with custom font family */
     --font-family-title: "Helvetica Neue", Helvetica, Arial, sans-serif;
 
-/* =============== fonts-size ================= */
---font-size-small: 1.25rem;
---font-size-medium: 1.6rem;
---font-size-large: 1.8rem;
---font-size-x-large: 2.3rem;
---font-size-xx-large: 4.8rem;
-
+/* ============== fonts sizes =================*/
+    --font-size-small: 1.2rem;
+    --font-size-medium: 1.6rem;
+    --font-size-large: 1.8rem;
+    --font-size-x-large: 2.3rem;
+    --font-size-xx-large: 4.8rem;
 }
+
+
+
 html {
     scroll-behavior: smooth;
     font-size: 62.5%;
 }
 
+
 body {
-    color: var(--text-color);
+    color: var(--text-color); 
     font-family: var(--font-family-base);
     font-size: var(--font-size-medium);
 }
-h1, h2, h3, h4, h4, h5, h6 {
+
+h1, h2, h3, h4, h5, h6 {
     font-family: var(--font-family-title);
 }
 
 a {
-  color: var(--text-color);
+   color: var(--text-color);
 }
 
 .visually-hidden {
@@ -47,5 +50,5 @@ a {
 }
 
 .section-tagline {
-    color: var(--color-primary); 
+    color: var(--color-primary);
 }
