--- a/0x02-CSS_advanced/styles/7-style.css
+++ b/0x02-CSS_advanced/styles/7-style.css
@@ -8,8 +8,8 @@
     --text-color: var(--color-black);
 
 /* ================== font family =====================*/
-    --font-family-base: "Helvetica Neue", Helvetica, Arial, sans-serif;/* Update root with custom font family */
-    --font-family-title: "Helvetica Neue", Helvetica, Arial, sans-serif;
+    --font-family-base: "Open Sans", "Helvetica Neue", Helvetica, Arial, sans-serif;/* Update root with custom font family */
+    --font-family-title: "Raleway", "Helvetica Neue", Helvetica, Arial, sans-serif;
 
 /* ============== fonts sizes =================*/
     --font-size-small: 1.2rem;
