--- a/0x02-CSS_advanced/styles/9-style.css
+++ b/0x02-CSS_advanced/styles/9-style.css
@@ -37,7 +37,7 @@ html {
 
 
 body {
-    color: var(--text-color); 
+    background-color: var(--text-color); 
     font-family: var(--font-family-base);
     font-size: var(--font-size-medium);
     font-weight: var(--font-weight-regular);
@@ -50,7 +50,7 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 a {
-   color: var(--text-color);
+   background-color: var(--text-color);
 }
 
 .visually-hidden {
@@ -58,9 +58,9 @@ a {
 }
 
 .card-category {
-    color: var(--color-primary);
+    background-color: var(--color-primary);
 }
 
 .section-tagline {
-    color: var(--color-primary);
+    background-color: var(--color-primary);
 }
