--- a/0x02-CSS_advanced/styles/19-style.css
+++ b/0x02-CSS_advanced/styles/19-style.css
@@ -552,7 +552,7 @@
     font-size: var(--font-size-small);
     color: var(--text-color);
 
-    ul.footer {
+    .footer ul {
         text-align: right;
     }
   }
