--- a/0x02-CSS_advanced/styles/19-style.css
+++ b/0x02-CSS_advanced/styles/19-style.css
@@ -528,31 +528,34 @@
     color: var(--nav-item-link-hover);
   }
 
-  ul.row {
+  ul.row{
     margin: 0;
-    padding: none;
+    padding: 0;
     list-style: none;
   }
-
-  .col-1-3 {
+  
+  .col-1-3{
     width: 33.33%;
     float: left;
     padding: 0.5rem;
   }
-
-  .col-1-2 {
+  
+  .col-1-2{
     width: 50%;
     float: left;
     padding: 0.5rem;
-
   }
-
-  .footer-copyright {
-    margin: none;
+  
+  .footer{
+    padding: var(--footer-padding);
+  }
+  
+  .footer-copyright{
+    margin: 0;
     font-size: var(--font-size-small);
     color: var(--text-color);
-
-    .footer ul {
-        text-align: right;
-    }
+  }
+  
+  .footer ul{
+    text-align: right;
   }
