--- a/0x02-CSS_advanced/styles/20-style.css
+++ b/0x02-CSS_advanced/styles/20-style.css
@@ -560,8 +560,8 @@
     text-align: right;
   }
 
-  .row {
+  .row::after {
     content: "";
     display: table;
-    float: none;
+    clear: both;
   }
