--- a/0x02-CSS_advanced/styles/23-style.css
+++ b/0x02-CSS_advanced/styles/23-style.css
@@ -556,7 +556,7 @@
     text-align: right;
   }
 
-  .footer-adress {
+  .footer-address {
     color: var(--text-color);
   }
 
@@ -586,4 +586,3 @@
       --section-title-color: var(--color-white);
       background-color: var(--color-black);
   }
-  
