--- a/0x02-CSS_advanced/styles/24-style.css
+++ b/0x02-CSS_advanced/styles/24-style.css
@@ -587,19 +587,19 @@
       background-color: var(--color-black);
   }
 
-  /*================ services ===================== */
-  .card-title .card-services {
+/* ============ Services ============== */
+.card-services .card-title {
     margin: 0;
-  }
+}
 
-  .card-services a {
+.card-services a {
     display: block;
     padding: 2rem;
     background-color: var(--color-light-grey);
-  }
+}
 
-  .card-services a:hover {
+.card-services a:hover {
     color: var(--color-white);
     background-color: var(--color-primary);
     text-decoration: none;
-  }
+}
