--- a/0x03-responsive_design/03-styles.css
+++ b/0x03-responsive_design/03-styles.css
@@ -176,6 +176,11 @@
     clip: rect(1px, 1px, 1px, 1px);
     white-space: nowrap;
   }
+
+  main img {
+    width: 100%;
+    height: auto;
+  }
   
   /*** 2. LAYOUT ***/
   
@@ -215,24 +220,22 @@
 
   @media screen and (max-width: 767px) {
     :root {
-        --section-padding: 5rem 1.5rem;
-        --section-body-padding: 2rem 0 0;
+      --section-padding: 5rem 1.5rem;
+      --section-body-padding: 2rem 0 0;
     }
 
     ul.row, .row {
-        flex-direction: column;
-        margin: 0;
-
+      flex-direction: column;
+      margin: 0;
     }
 
     [class*='col-'] {
-        margin: 0 0 3rem 0;
+      margin: 0 0 3rem 0;
     }
 
     .col-1-3, .col-1-2 {
-        width: 100%;
+      width: 100%;
     }
-
   }
   
   /* Navbar
@@ -286,7 +289,7 @@
 
   @media screen and (max-width: 767px) {
     .navbar-menu {
-        display: none;
+      display: none;
     }
   }
   
@@ -297,7 +300,7 @@
     padding: var(--header-padding);
     position: relative;
     z-index: 3;
-    background: transparent;
+    background: transparent !important;
   }
   
   .header-container {
@@ -430,7 +433,7 @@
 
   @media screen and (max-width: 767px) {
     .section-latest-news .row {
-        flex-direction: column;
+      flex-direction: column;
     }
   }
   
